prometheus/prometheus-operator-grafana-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: monitor
spec:
  redirectScheme:
    scheme: https
    port: "443"
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http-route
  namespace: monitor
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.k8s`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: prometheus-operator-grafana
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https-route
  namespace: monitor
spec:
  entryPoints:
    - websecure
  tls:
    secretName: grafana.k8s-tls
  routes:
    - match: Host(`grafana.k8s`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: prometheus-operator-grafana
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http-route
  namespace: monitor
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.k8s`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: prometheus-operator-prometheus
          port: 9090
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-https-route
  namespace: monitor
spec:
  entryPoints:
    - websecure
  tls:
    secretName: prometheus.k8s-tls
  routes:
    - match: Host(`prometheus.k8s`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: prometheus-operator-prometheus
          port: 9090
